# YTD-Wrap

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ytd_wrap/: __init__.py  __main__.py  exceptions.py  version.py
src/ytd_wrap/cli/: __init__.py  app.py  console.py  doctor.py  exit_codes.py  format_prompt.py  progress.py
src/ytd_wrap/core/: __init__.py  download_service.py  format_filter.py  metadata_service.py  models.py  protocols.py
src/ytd_wrap/infra/: __init__.py  ffmpeg_detector.py  ytdlp_download_provider.py  ytdlp_provider.py
src/ytd_wrap/utils/: __init__.py
tests/: __init__.py  conftest.py  test_cli.py  test_dependencies.py  test_display.py  test_doctor.py  test_download.py  test_downloader.py  test_extractor.py  test_ffmpeg_detector.py  test_format_filter.py  test_format_prompt.py  test_metadata_service.py  test_models.py  test_optional_ui_dependencies.py  test_optional_ytdlp_dependency.py  test_paths.py  test_resolver.py  test_scaffold.py  test_selector.py  test_updates.py
ytd_wrap/: __init__.py  cli.py  constants.py
ytd_wrap/checks/: __init__.py  dependencies.py  updates.py
ytd_wrap/core/: __init__.py  downloader.py  extractor.py  resolver.py
ytd_wrap/ui/: __init__.py  display.py  selector.py
ytd_wrap/utils/: __init__.py  exceptions.py  logger.py  paths.py
